User- seller registering- half way done.