@@ -1,8 +1,9 @@
-package com.project.parkrental.security;
+package com.project.parkrental.security.Service;
 
-import lombok.Data;
-import lombok.EqualsAndHashCode;
-import lombok.ToString;
+import com.project.parkrental.security.DTO.Admin;
+import com.project.parkrental.security.Repository.AdminRepository;
+import com.project.parkrental.security.DTO.User;
+import com.project.parkrental.security.Repository.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -12,21 +13,40 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
 
 @Service
 public class MyUserDetailsService implements UserDetailsService {
     @Autowired
     private UserRepository userRepository;
 
+    @Autowired
+    private AdminRepository adminRepository;
+
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-        User user = userRepository.findByUsername(username)
-                .orElseThrow(() -> new UsernameNotFoundException("User not found"));
-        return new org.springframework.security.core.userdetails.User(user.getUsername(), user.getPassword(), getAuthorities(user));
+        User user = userRepository.findByUsername(username);
+        if (user != null) {
+            return new org.springframework.security.core.userdetails.User(
+                    user.getUsername(),
+                    user.getPassword(),
+                    getAuthorities("ROLE_USER")
+            );
+        }
+
+        Admin admin = adminRepository.findByUsername(username);
+
+        if (admin != null) {
+            return new org.springframework.security.core.userdetails.User(
+                    admin.getUsername(),
+                    admin.getPassword(),
+                    getAuthorities("ROLE_ADMIN"));
+        }
+
+        throw new RuntimeException("User not found with username: " + username);
     }
 
-    private Collection<? extends GrantedAuthority> getAuthorities(User user) {
-        return List.of(new SimpleGrantedAuthority(user.getAuthority()));
+    private Collection<? extends GrantedAuthority> getAuthorities(String role) {
+        return Collections.singletonList(new SimpleGrantedAuthority(role));
     }
 }
